# gimp-save-for-web

./: AUTHORS  BUGS  COPYING  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  depcomp
help/: Makefile.in
help/en/: Makefile.in  index.html
help/images/: Makefile.in
po/: ChangeLog  POTFILES.in  az.po  ca.po  de.po  es.po  fr.po  it.po  ja.po  ko.po  missing  pt_BR.po  ru.po  sk.po  sv.po  zh_TW.po
src/: Makefile.am  Makefile.in  cursors.c  cursors.h  webx_crop_widget.c  webx_crop_widget.h  webx_dialog.c  webx_dialog.h  webx_gif_target.c  webx_gif_target.h  webx_indexed_target.c  webx_indexed_target.h  webx_jpeg_target.c  webx_jpeg_target.h  webx_main.c  webx_main.h  webx_pipeline.c  webx_pipeline.h  webx_png24_target.c  webx_png24_target.h  webx_png8_target.c  webx_png8_target.h  webx_prefs.c  webx_prefs.h  webx_preview.c  webx_preview.h  webx_resize_widget.c  webx_resize_widget.h  webx_target.c  webx_target.h  webx_utils.c  webx_utils.h
src/cursors/: Makefile.am  Makefile.in
